Refactor project structure and add responsive styles
- Update .gitignore to include additional files
- Add sass dependency to package.json and package-lock.json
- Implement layout and responsive styles in SCSS files
- Create Navbar component and integrate it into App component

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 .DS_Store
+node_modules/
+dist/
+coverage/
+.env
+.vscode/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
+yarn.lock
+.idea/
+*.iml 
+*.swp
+*.swo
+*.bak
+*.tmp
+*.log       
